<resources>
    <string name="app_name">BottomNavigationConcept</string>
    <string name="my_profile">My Profile</string>
    <string name="contact">Contact</string>
    <string name="utilities">Utilities</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Utilities">Utilities</string>
    <string name="Contact_us">Contact Us</string>
    <string name="Search">Search</string>
    <string name="My_profile">My Profile</string>
</resources>